--- a/src/sass/_styles.scss
+++ b/src/sass/_styles.scss
@@ -1,3 +1,68 @@
 li {
   list-style: none;
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+ul {
+  margin-left: 30px;
+  margin-right: 30px;
+  padding: 0;
+}
+
+body {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+button {
+  background-color: salmon;
+  border-radius: 20px;
+  margin: 30px;
+  width: 200px;
+}
+
+.start-btn {
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.body-style {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell,
+    'Helvetica Neue', sans-serif;
+}
+
+.container {
+  color: #333;
+  margin: 0 auto;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.input {
+  width: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  background-color: salmon;
+  border-radius: 20px;
+}
+
+.field {
+  display: inline-block;
+  font-size: 1em;
+  list-style-type: none;
+  padding: 1em;
+  text-transform: uppercase;
+}
+
+.field > span {
+  display: block;
+  font-size: 2.5rem;
 }
