--- a/src/sass/_styles.scss
+++ b/src/sass/_styles.scss
@@ -66,3 +66,18 @@ button {
   display: block;
   font-size: 2.5rem;
 }
+
+// ---- Task 3 ----
+
+.task {
+  font-weight: bold;
+}
+
+.markup-task {
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 0;
+  margin-bottom: 0;
+  max-width: 200px;
+  text-align: center;
+}
