--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -89,4 +89,17 @@ button {
   display: block;
   font-size: 2.5rem;
 }
+
+.task {
+  font-weight: bold;
+}
+
+.markup-task {
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 0;
+  margin-bottom: 0;
+  max-width: 200px;
+  text-align: center;
+}
 /*# sourceMappingURL=main.css.map */
